--- a/Style/main.css
+++ b/Style/main.css
@@ -89,3 +89,31 @@ header .container{
 .filme-principal .container{
     width: 50%;
 }
+
+/*Botões*/
+
+
+.botao{
+    background-color: rgba(0,0,0,.50);
+    border:none;
+    color: white;
+
+    padding:15px 30px;
+    margin-right: 15px;
+    font-size: 12px;
+
+    cursor: pointer;
+    transition: .3s ease all;
+
+    border-radius: 16px;
+}
+
+.botao:hover{
+    background-color:white;
+    color:black;
+    border-radius: 16px;
+}
+
+.botao i{
+    margin-right: 8px;
+}
