--- a/Style/main.css
+++ b/Style/main.css
@@ -71,7 +71,7 @@ header .container{
 
 .filme-principal .descricao{
     margin-top: 10px;
-    margin-bottom: 30px;
+    margin-bottom: 7px;
 }
 
 
@@ -83,7 +83,7 @@ header .container{
 
 
 .container{
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .filme-principal .container{
@@ -117,3 +117,16 @@ header .container{
 .botao i{
     margin-right: 8px;
 }
+
+.carrosel-filmes{
+    margin-top:3px;
+
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
